src/styles/_global.scss
@import './variables';
@import './functions';
@import './mixins';

html,
html > body {
  height: 100%;
  max-height: 100%;
  min-height: 100%;
  overflow: hidden;
}

html > body {
  direction: $direction;
  font-family: sans-serif;
  width: 100%;
}

.fv-block {
  display: block !important;
  width: 100%;
}

.fv-flex {
  display: flex !important;
}

.fv-inline-block {
  display: inline-block !important;
}

.fv-inline {
  display: inline !important;
}

.fv-full-width {
  width: 100% !important;
}

.fv-hide {
  display: none !important;
}

.fv-hidden {
  border: 0 !important;
  display: inline-block !important;
  height: 0 !important;
  margin: 0 !important;
  opacity: 0 !important;
  outline: none !important;
  padding: 0 !important;
  position: absolute !important;
  width: 0 !important;
}

.fv-overlay {
  background: $shadow-color-dark;
  height: 100%;
  left: 0;
  position: absolute;
  text-align: center;
  top: 0;
  width: 100%;
  z-index: 2;

  &.light {
    background: $shadow-color-light;
  }
}

.fv-link {
  &,
  &:hover,
  &:active,
  &:focus,
  &:visited {
    color: $primary-color-light;
    cursor: pointer;
    text-decoration: none;
  }
}

.fv-hr {
  background: transparent;
  border-bottom: 0;
  border-top: solid 1px $shadow-color;
  height: 0;
  width: 100%;
}

.fv-text-center {
  text-align: center !important;
}

.fv-text-right {
  text-align: right !important;
}

.fv-text-end {
  text-align: $block-end !important;
}

.fv-text-left {
  text-align: left !important;
}

.fv-text-start {
  text-align: $block-start !important;
}

.fv-text-justify {
  text-align: justify !important;
}

.fv-rtl {
  direction: rtl !important;
}

.fv-ltr {
  direction: ltr !important;
}

.fv-grow {
  flex-grow: 1 !important;
}

.fv-padding {
  padding: $padding !important;
}

.fv-vertical-padding {
  padding-bottom: $padding !important;
  padding-top: $padding !important;
}

.fv-horizontal-padding {
  padding-left: $padding !important;
  padding-right: $padding !important;
}

.f-padding-small {
  padding: $padding-small !important;
}

.fv-vertical-padding-small {
  padding-bottom: $padding-small !important;
  padding-top: $padding-small !important;
}

.fv-horizontal-padding-small {
  padding-left: $padding-small !important;
  padding-right: $padding-small !important;
}

.fv-no-padding {
  padding: 0 !important;
}

.fv-no-vertical-padding {
  padding-bottom: 0 !important;
  padding-top: 0 !important;
}

.fv-no-horizontal-padding {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

.fv-no-border {
  border: 0 !important;
}

.fv-pull-left {
  float: left !important;
}

.fv-pull-right {
  float: right !important;
}

.fv-pull-start {
  float: $block-start !important;
}

.fv-pull-end {
  float: $block-end !important;
}

.fv-clear-both {
  clear: both !important;
}

.fv-pointer {
  cursor: pointer !important;
}

.fv-word-wrap {
  white-space: normal !important;
}

.fv-no-wrap {
  overflow: hidden !important;
  text-overflow: ellipsis !important;
  white-space: nowrap !important;
}

.fv-text-gray {
  color: $color-light !important;
}

.fv-text-primary {
  color: $primary-color !important;
}

.fv-text-secondary {
  color: $secondary-color !important;
}

.fv-text-info {
  color: $info-color !important;
}

.fv-text-danger {
  color: $danger-color !important;
}

.fv-text-warning {
  color: $warning-color !important;
}

.fv-text-light {
  color: $color-light !important;
}

.fv-text-dark {
  color: $color-dark !important;
}

.fv-control-label {
  @include nowrap;

  color: $color-light;
  display: block;
  max-width: 100%;
  min-height: 1px;
}

.fv-form-control-group {
  border: 1px solid $shadow-color;
  border-radius: $border-radius;
  box-shadow: 0 0.3em 0.5em $shadow-color-light;
  clear: both;
  padding: #{$padding / 2};

  & > .fv-control-label {
    padding: inherit;
  }
}

.fv-input-group {
  display: inline-block;

  & > *:first-child {
    border-bottom-#{$block-end}-radius: 0;
    border-top-#{$block-end}-radius: 0;
  }

  & > *:last-child {
    border-bottom-#{$block-start}-radius: 0;
    border-top-#{$block-start}-radius: 0;
  }

  & > *:not(:last-child) {
    border-#{$block-end}: 0;
  }

  & > *:not(:last-child):not(:first-child) {
    border-radius: 0;
  }
}

.fv-no-transition {
  transition: 0s !important;
}

.fv-fast-animation {
  animation-duration: 0.6s !important;
}

.fv-fade-enter-active,
.fv-fade-leave-active {
  opacity: 1;
  transition-duration: $transition-speed;
  transition-property: opacity;
}

.fv-fade-enter,
.fv-fade-leave-active {
  opacity: 0;
}

.fv-form-control {
  display: inline-block;
  font-family: inherit;
  max-width: 100%;
  width: 100%;
}

